Change in configuration for db

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ DB_PORT = 5432
 DB_USERNAME = postgres
 DB_PASSWORD = toor
 DB_DATABASE = db_diagram
+DATABASE_URL= postgres://diagram-api-main-db-0668a398350ca77a4:sjE6tamD5c1wYPaYHeZf6AXJCWhsU2@user-prod-us-east-2-1.cluster-cfi5vnucvv3w.us-east-2.rds.amazonaws.com:5432/diagram-api-main-db-0668a398350ca77a4
 
 #JWT
 JWT_SECRET=secret
