Add generate code from diagram xml

--- a/.env
+++ b/.env
@@ -8,3 +8,7 @@ DATABASE_URL= postgres://diagram-api-main-db-0668a398350ca77a4:sjE6tamD5c1wYPaYH
 #JWT
 JWT_SECRET=secret
 JWT_EXPIRES_IN=1d
+
+#OPEN API
+OPENAI_API_KEY = 
+OPENAI_MODEL = gpt-3.5-turbo
